2002-04-08  kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/pt-machine.h: Define _PT_MACHINE_H
	if it isn't defined yet.
	(FLOATING_STACKS, EARCH_STACK_MAX_SIZE): Defined.
	(THREAD_GETMEM, THREAD_GETMEM_NC, THREAD_SETMEM, THREAD_SETMEM_NC):
	Likewise.
	* sysdeps/sh/tls.h: New file.

2002-04-08  Jakub Jelinek  <jakub@redhat.com>

	* manager.c (__pthread_manager_event): Use self instead of arg
	for INIT_THREAD_SELF.
	* sysdeps/i386/useldt.h (INIT_THREAD_SELF): Use sizeof (struct
	_pthread_descr_struct) instead of sizeof (*descr).

2002-04-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/pt-machine.h: Protect against multiple inclusion.
	* sysdeps/alpha/pt-machine.h: Likewise.
	* sysdeps/arm/pt-machine.h: Likewise.
	* sysdeps/cris/pt-machine.h: Likewise.
	* sysdeps/hppa/pt-machine.h: Likewise.
	* sysdeps/m68k/pt-machine.h: Likewise.
	* sysdeps/mips/pt-machine.h: Likewise.
	* sysdeps/powerpc/pt-machine.h: Likewise.
	* sysdeps/s390/s390-32/pt-machine.h: Likewise.
	* sysdeps/s390/s390-64/pt-machine.h: Likewise.
	* sysdeps/sh/pt-machine.h: Likewise.
	* sysdeps/sparc/sparc32/pt-machine.h: Likewise.
	* sysdeps/sparc/sparc64/pt-machine.h: Likewise.
	* sysdeps/x86_64/pt-machine.h: Likewise.

2002-04-05  Jakub Jelinek  <jakub@redhat.com>

	* man/pthread_mutexattr_init.man (pthread_mutexattr_settype): Document
	instead of pthread_mutexattr_setkind_np.
	(pthread_mutexattr_gettype): Similarly.
	* man/pthread_mutexattr_setkind_np.man: New.
	* man/Makefile (SOURCES): Add pthread_mutexattr_setkind_np.man.

2002-04-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/ia64/pt-machine.h (MEMORY_BARRIER): Define.

2002-03-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/mips/pt-machine.h (MEMORY_BARRIER): Remove.

2002-03-22  Ulrich Drepper  <drepper@redhat.com>

	* internals.h (MEMORY_BARRIER): Define as asm with memory as clobber.

2002-03-17  Andreas Jaeger  <aj@suse.de>

	* sysdeps/i386/pt-machine.h: Add testandset and __compare_and_swap
	prototpyes.